@@ -1,3 +1,7 @@
+2 April 2015: Wouter
+	- Fix #660: Fix interface-automatic broken in the presence of
+	  asymmetric routing.
+
 26 March 2015: Wouter
 	- remote.c probedelay line is easier to read.
 	- rename ldns subdirectory to sldns to avoid name collision.
